Minor cleanup of left over code. Also adjusted the samples css to account for overflowing issues

--- a/assets/style/jquery.fs.scroller.css
+++ b/assets/style/jquery.fs.scroller.css
@@ -12,7 +12,7 @@
 	}
 	.scroller-bar { background: #FBFBFB; border-left: 1px solid #EEEEEE; display: none; height: 100%; position: absolute; right: 0; top: 0; width: 20px; z-index: 2; }
 	.scroller-track { background: #FBFBFB; height: 100%; overflow: hidden; position: relative; width: 100%; }
-	.scroller-handle { background: #EEEEEE; border: 1px solid #D5D5D5; border-radius: 5px; cursor: pointer; height: 20px; overflow: hidden; position: absolute; right: 5px; top: 0; width: 10px; z-index: 2;
+	.scroller-handle { background: #EEEEEE; border: 1px solid #D5D5D5; border-radius: 20px; cursor: pointer; height: 20px; overflow: hidden; position: absolute; right: 5px; top: 0; width: 10px; z-index: 2;
 		-webkit-transition: right 0.1s linear, width 0.1s linear;
 		   -moz-transition: right 0.1s linear, width 0.1s linear;
 		   	-ms-transition: right 0.1s linear, width 0.1s linear;
