--- a/assets/style/lightning.css
+++ b/assets/style/lightning.css
@@ -90,7 +90,7 @@ h1 {
 
 #sample-triggers {
     width: 79%;
-    min-width: 815px;
+    min-width: 800px;
     overflow: hidden;
     position: relative;
     float: left;
@@ -314,6 +314,8 @@ h1 {
     background: #fe9900;
     margin: 31px 0 0 33px;
 }
+
+.files ul { margin: -20px; }
 
 .files li {
     height: 1.2em;
